plugins {
    id "com.avast.gradle.docker-compose" version "0.6.9"
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'maven'
    apply plugin: 'project-report'
    apply plugin: "idea"
    apply plugin: "signing"

    repositories {
        mavenLocal()
        mavenCentral()
    }
    buildscript {
        repositories {
            mavenLocal()
            mavenCentral()
        }
    }

    sourceCompatibility = 11
    targetCompatibility = 11

    apply from: "${rootProject.projectDir}/dependencies.gradle"
}

dependencies {
    compile project(':main')
}

task cleanDocker(type: Exec) {
    commandLine ("docker", "rm", "-f", "pl_test_db").setIgnoreExitValue(true)
}

